--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.0",
     "rehype-cli": "^12.0.0",
-    "rehype-highlight": "^7.0.0",
     "rehype-preset-minify": "^7.0.0",
     "rehype-prevent-favicon-request": "^4.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
+    "rehype-starry-night": "^2.0.0",
     "remark-gfm": "^4.0.0",
     "remark-toc": "^9.0.0",
     "stylelint": "^16.0.0",
